--- a/fe_resources/css/theme-pink.css
+++ b/fe_resources/css/theme-pink.css
@@ -3,7 +3,7 @@
 
 html					{-webkit-tap-highlight-color:#CC2262;}
 
-a,.more,.services.boxed .details h4 a:hover,.services.iconic h3,.content a,.description a:hover,.description a:focus,.microlocations p a:hover,.microlocations p a:focus,.hentry .entry-content h2 a:hover,.hentry .entry-content h2 a:focus,.footer .contact-data a:hover,.footer .contact-data a:focus,.xdsoft_datetimepicker  .xdsoft_calendar td.xdsoft_today,.faqs .expanded,.faqs .expanded:after 		{color:#CC2262;}
+a,.more,.services.boxed .details h4 a:hover,.services.iconic h3,.content a,.description a:hover,.description a:focus,.microlocations p a:hover,.microlocations p a:focus,.hentry .entry-content h2 a:hover,.hentry .entry-content h2 a:focus,.footer .contact-data a:hover,.footer .contact-data a:focus,.xdsoft_datetimepicker  .xdsoft_calendar td.xdsoft_today,.faqs .expanded,.faqs .expanded:after 		{color:#ca850f;}
 .color,.pager a.current,.pager a:hover,.pager a:focus,table.hover tr:hover td,.tabs li.active a,.social li:hover,.data th,.tabs li a:hover,.tabs li a:focus,.xdsoft_datetimepicker  .xdsoft_calendar td.xdsoft_default,.xdsoft_datetimepicker  .xdsoft_calendar td.xdsoft_current,.xdsoft_datetimepicker  .xdsoft_timepicker .xdsoft_time_box >div >div.xdsoft_current,.xdsoft_datetimepicker  .xdsoft_label > .xdsoft_select > div > .xdsoft_option.xdsoft_current,.xdsoft_datetimepicker  .xdsoft_label > .xdsoft_select > div > .xdsoft_option:hover,.slicknav_menu .slicknav_icon-bar			{background-color:#feb12d;}
 .xdsoft_datetimepicker  .xdsoft_calendar td:hover,.xdsoft_datetimepicker  .xdsoft_timepicker .xdsoft_time_box >div >div:hover {background:#CC2262 !important;}
 .btn:hover,.btn:focus 		{background:#CC2262 !important;color:#fff !important;}
