--- a/fe_resources/css/style.css
+++ b/fe_resources/css/style.css
@@ -1294,5 +1294,10 @@ div.selector span:before{
 
 .driver-ref{
     font-size: .8em !important;
-    padding-left: 5px 
+    padding-left: 5px
+}
+
+.map-style{
+  width: 100%;
+  height: 500px;
 }
