--- a/fe_resources/css/style.css
+++ b/fe_resources/css/style.css
@@ -1301,3 +1301,9 @@ div.selector span:before{
   width: 100%;
   height: 500px;
 }
+
+.main-error{
+    background: url(../images/lost.jpg) -50px 100% no-repeat;
+    padding: 0;
+    min-height: 630px;
+}
