--- a/fe_resources/css/style.css
+++ b/fe_resources/css/style.css
@@ -351,7 +351,7 @@ html, body {
 .result .one-fourth > div	 {padding:25px 30px 0 30px;height:100%;display:inline-block;width:100%;position:relative;}
 .result .price		{font-size:37px;line-height:1.2;}
 .result .price small 	{font-size:20px;}
-.result .meta 		{font-size:15px;color:#34394A;}
+.result .meta 		{color: #838383!important}
 .result .btn			{width:100%;float:left;margin:27px 0 0;}
 
 .result .full-width 	{border-top:1px solid #DFDFD0;padding:25px 50px 15px 30px;position:relative;background:#fff;border-bottom:1px solid #DFDFD0;-webkit-box-shadow:1px 0 0 0 #DFDFD0 inset,-1px 0 0 0 #DFDFD0 inset;-moz-box-shadow:1px 0 0 0 #DFDFD0 inset,-1px 0 0 0 #DFDFD0 inset;box-shadow:1px 0 0 0 #DFDFD0 inset,-1px 0 0 0 #DFDFD0 inset;-webkit-border-radius:0 0 3px 3px;-moz-border-radius:0 0 3px 3px;border-radius:0 0 3px 3px;}
@@ -1293,13 +1293,22 @@ div.selector span:before{
 }
 
 .driver-ref{
-    font-size: .8em !important;
-    padding-left: 5px
+    font-size: .7em !important;
+    padding-left: 5px;
+    display: inline-block;
+}
+
+.driver-name{
+    font-size: 1em!important;
+    color: #333333!important;
+    padding-left: 5px;
+    display: inline-block;
+    font-size: 13px;
 }
 
 .map-style{
-  width: 100%;
-  height: 500px;
+    width: 100%;
+    height: 500px;
 }
 
 .main-error{
